# cim-domain-relationship

./: Cargo.toml
src/: lib.rs
src/aggregates/: edge.rs  hyperedge.rs  mod.rs  space.rs
src/commands/: mod.rs
src/cross_domain/: mod.rs
src/events/: mod.rs
src/infrastructure/: mod.rs
src/nats/: mod.rs
src/projections/: mod.rs
src/quality/: mod.rs
src/services/: mod.rs
src/value_objects/: mod.rs
